src/test/contracts/negative/annotated_storage_and_parameter.mligo
type storage = (int, int) map
type 'a parameter = 'a list

let main ((_p, s) : parameter * storage) : operation list * storage = 
 ([], s)
